fix: styles: form width on small screens

--- a/src/containers/pages/Auth/Auth.scss
+++ b/src/containers/pages/Auth/Auth.scss
@@ -13,7 +13,7 @@
 .auth-form {
   margin: auto;
   max-width: 500px;
-  width: 100%;
+  width: 90%;
   padding: 20px;
   background: rgba(255, 255, 255, .95);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, .7);
